--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-bootstrap": "^0.12.2",
+    "angular-ui-bootstrap": "^1.3.3",
     "bootstrap": "^3.3.6",
     "browser-serialport": "^2.0.3",
     "d3": "^3.5.17",
     "firmata": "^0.12.0",
+    "install": "^0.8.1",
     "johnny-five": "^0.9.49",
     "jquery": "^2.2.4",
+    "npm": "^3.9.2",
     "underscore": "^1.8.3"
   }
 }
