--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,10 @@
     "angular-bootstrap": "^1.3.3",
     "d3": "^3.5.17",
     "underscore": "^1.8.3",
-    "google-blockly": "*"
+    "google-blockly": "*",
+    "angular-translate": "^2.11.0",
+    "angular-translate-loader-static-files": "^2.11.0",
+    "angular-translate-storage-local": "^2.11.0"
   },
   "homepage": "https://github.com/elaval/Firstmakers-Blockly",
   "authors": [
