--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "index.html",
-  "name": "firstmakers",
+  "name": "Firstmakers",
   "description": "Firstmakers (blockly version)",
   "version": "0.2.1",
   "keywords": [
