--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "google-blockly": "*",
     "angular-translate": "^2.11.0",
     "angular-translate-loader-static-files": "^2.11.0",
-    "angular-translate-storage-local": "^2.11.0"
+    "angular-translate-storage-local": "^2.11.0",
+    "file-saver": "^1.3.2"
   },
   "homepage": "https://github.com/elaval/Firstmakers-Blockly",
   "authors": [
