--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "firstmakers-blockly",
   "version": "0.0.1",
   "dependencies": {
-    "angular": "^1.5.5",
+    "angular": "^1.5.7",
     "jquery": "^2.2.4",
     "bootstrap": "^3.3.6",
     "angular-bootstrap": "^1.3.3",
@@ -12,7 +12,9 @@
     "angular-translate": "^2.11.0",
     "angular-translate-loader-static-files": "^2.11.0",
     "angular-translate-storage-local": "^2.11.0",
-    "file-saver": "^1.3.2"
+    "file-saver": "^1.3.2",
+    "angular-ui-router": "^0.3.1",
+    "angular-jwt": "^0.0.9"
   },
   "homepage": "https://github.com/elaval/Firstmakers-Blockly",
   "authors": [
